found solve of neihborSerializer problem