@@ -21,11 +21,11 @@
     <properties>
         <java.version>21</java.version>
         <springframework.boot.web.version>3.4.0</springframework.boot.web.version>
-        <lombok.version>1.18.30</lombok.version>
+        <lombok.version>1.18.38</lombok.version>
         <paho.mqtt5.version>1.2.5</paho.mqtt5.version>
-        <cdimascio.version>2.2.0</cdimascio.version>
+        <cdimascio.version>2.2.4</cdimascio.version>
         <paulschwarz.version>3.0.0</paulschwarz.version>
-        <com.fasterxml.jackson.core.version>2.15.0</com.fasterxml.jackson.core.version>
+        <com.fasterxml.jackson.core.version>2.18.2</com.fasterxml.jackson.core.version>
     </properties>
 
     <dependencies>
@@ -85,15 +85,20 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${com.fasterxml.jackson.core.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.20.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
@@ -118,6 +123,10 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
